--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ ul{
 body {
 
     padding-top: 20px;
-    background-image: url(./assets/Fundo.jpg);
+    background-image: url(./assets/bg.jpg);
     background-position: top-center;
     background-size: 100% auto;
     background-repeat: no-repeat;
